--- a/views/list_log_files.pug
+++ b/views/list_log_files.pug
@@ -10,7 +10,7 @@ block content
   p
     font(size="3px")
       div
-        table(id="log_files_tbl", width="100%")
+        table(id="log_files_tbl", width="100%", style="overflow:scroll;white-space:pre;")
           tr
             th(id="Name", style="background-color: #000")
               | Name
