--- a/views/list_mac_keys.pug
+++ b/views/list_mac_keys.pug
@@ -10,7 +10,7 @@ block content
   p
     font(size="3px")
       div
-        table(id="mac_prov_frame_tbl", width="100%")
+        table(id="mac_keys_tbl", width="100%", style="overflow:scroll;white-space:pre;")
           tr
             th(id="MacKey", style="background-color: #000")
               | Name
