--- a/views/unwrap_mac_keys.pug
+++ b/views/unwrap_mac_keys.pug
@@ -7,6 +7,9 @@ block content
   font(size="3px", color="#aaf")
     p(align="right")
       | #{help}
+  font(size="5px")
+    p
+      | #{content}
   script(type="text/javascript")
     | var active_keys = #{activeKeys};
     | function localOnLoad() 
