--- a/views/extract_she_args_packets.pug
+++ b/views/extract_she_args_packets.pug
@@ -43,7 +43,7 @@ block content
     | var sheArgsTbl = document.getElementById('she_args_tbl');
     | function localOnLoad() 
     | {
-    |   for (var i = mac_prov_frame_tbl.length-1; i >= 0; i--)
+    |   for (var i = she_args_tbl.length-1; i >= 0; i--)
     |   {
     |     var newRow = sheArgsTbl.insertRow(1); // Add a row under header row
     |     // Add a column in this new row for M2 of the SHE args record
