--- a/views/layout.pug
+++ b/views/layout.pug
@@ -92,6 +92,9 @@ html(lang="fr")
                       a(href='/set_mac_keys')
                         | Set active K_MAC_ECU and K_MASTER_ECU keys 
                       br
+                      a(href='/reset_mac_keys')
+                        | Reset active K_MAC_ECU and K_MASTER_ECU keys 
+                      br
             tr(class="content")
               td(class="content")
                 p(class="content").
