Added secured frames processing

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -53,6 +53,9 @@ html(lang="fr")
                       a(href='/extract_mac_frames')
                         | Extract and import MAC prov. frames from stored log file
                       br
+                      a(href='/extract_secured_mac_frames')
+                        | Extract and import secured MAC frames from stored log file
+                      br
                       a(href='/list_mac_prov_frame')
                         | List MAC prov frames
                       br
