--- a/views/list_log_files.pug
+++ b/views/list_log_files.pug
@@ -27,12 +27,18 @@ block content
             th(id="UUID", style="background-color: #000")
               | UUID
             th(id="FramesExtracted", style="background-color: #000")
-              | FramesExtracted
+              | Frames Extracted
+            th(id="SecuredFramesExtracted", style="background-color: #000")
+              | Secured Frames Extracted
   script(type="text/javascript")
     | var log_files_tbl = #{logfiles};
     | var logFilesTbl = document.getElementById('log_files_tbl');
-  script(type="text/javascript")
     | var active_keys = #{activeKeys};
+    | function onSecuredFrameExtract(i)
+    | {
+    |    var url = '/extract_secured_mac_frames/' + log_files_tbl[i]['id'];
+    |    document.location.href = url;
+    | }
     | function localOnLoad()
     | {
     |   for (var i = log_files_tbl.length-1; i >= 0; i--)
@@ -68,6 +74,22 @@ block content
     |     // Add a column for the FramesExtracted of the log file
     |     newCell = newRow.insertCell(7);
     |     newCell.innerHTML = '<input type="checkbox" onclick="this.checked=!this.checked;" readonly'+(log_files_tbl[i]['FramesExtracted'] ? ' checked' : '')+'>&nbsp;</input>';
+    |     // Add a column for the FramesExtracted of the log file
+    |     newCell = newRow.insertCell(8);
+    |     var inputelem = document.createElement("input"); 
+    |     var typeatttr = document.createAttribute("type");
+    |     typeatttr.value = "checkbox";
+    |     inputelem.setAttributeNode(typeatttr);
+    |     var onclickattr = document.createAttribute("onclick");
+    |     onclickattr.value = "onSecuredFrameExtract(" + i +")";
+    |     inputelem.setAttributeNode(onclickattr);
+    |     if (log_files_tbl[i]['SecuredFramesExtracted'])
+    |     {
+    |       var checkedattr = document.createAttribute("checked");
+    |       inputelem.setAttributeNode(checkedattr);
+    |     }
+    |     
+    |     newCell.innerHTML = inputelem.outerHTML;
     |   }
     |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
     |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
