Added extraction of secured frame

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -60,6 +60,15 @@ html(lang="fr")
                         | List MAC prov frames
                       br
                     h3
+                      |  Secured MAC frames 
+                    p
+                      a(href='/compute_secured_frames_mac')
+                        | Compute MAC for secured frames
+                      br
+                      a(href='/list_mac_prov_frame')
+                        | List MAC prov frames
+                      br
+                    h3
                       |  SHE commands args (M1-M5) 
                     p
                       a(href='/extract_she_args_packets')
