--- a/views/layout.pug
+++ b/views/layout.pug
@@ -65,6 +65,9 @@ html(lang="fr")
                       a(href='/compute_secured_frames_mac')
                         | Compute/verify MAC for secured frames stored in DB
                       br
+                      a(href='/compute_secured_frames_mac_by_id')
+                        | Compute/verify MAC for only one selected secured frames stored in DB (by id)
+                      br
                       a(href='/list_secured_frame')
                         | List frames secured by MAC stored in DB
                       br
