--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,3 +17,47 @@ a {
     text-align: left;
     padding: 10px;
 }
+
+input[type=text] {
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: none;
+    border-bottom: 2px dotted #5657EF;
+    background-color: #5657EF;
+}
+
+input[type=button] {
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: none;
+    border-bottom: 2px dotted #5657EF;
+    background-color: #56576F;
+    color: #FFFFFF;
+}
+
+.cancel input[type=button] {
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: none;
+    border-bottom: 2px dotted #5657EF;
+    background-color: #56175F;
+    color: #FFFFFF;
+}
+
+input[type=submit] {
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: none;
+    border-bottom: 2px dotted #5657EF;
+    background-color: #56175F;
+    color: #FFFFFF;
+}
+
+input[type=file] {
+    cursor: question;
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: none;
+    border-bottom: 2px dotted #5657EF;
+    background-color: #5657EF;
+}
