--- a/views/list_secured_frames.pug
+++ b/views/list_secured_frames.pug
@@ -11,7 +11,7 @@ block content
     font(size="5px")
       div
         table(width="100%")
-          tr
+          tr(class="page-cursor")
             td(width="30%", align="left").
               pages cursor:
             td
