--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,12 +19,20 @@ a {
 }
 
 .div-scroll div.scroll {
-    background-color: #fff;
+    background-color: #5657EF;
     width: 1000px;
     height: 400px;
     overflow: auto;
     text-align: left;
     padding: 10px;
+}
+
+textarea {
+    overflow: auto;
+    padding: 4px 8px;
+    background-color: #5657EF;
+    border-radius: 20px;
+    border: none;
 }
 
 input[type=text] {
