--- a/views/import_log_file.pug
+++ b/views/import_log_file.pug
@@ -23,7 +23,7 @@ block content
           td
             input(type="submit", title="Send the file to upload ...", class="rapr-button", value="File upload")
           td
-            input(type="button", title="Cancel the file upload ...", class="rapr-button", value="Annulation", onclick="$('#releve').trigger('reset');")
+            input(type="button", title="Cancel the file upload ...", class="rapr-button", value="Annulation", onclick="$('#logfile').trigger('reset');")
   script(type="text/javascript", src='/javascripts/tooltip.js')
   script(type="text/javascript")
     | var active_keys = #{activeKeys};
