--- a/views/list_mac_prov_frame.pug
+++ b/views/list_mac_prov_frame.pug
@@ -12,12 +12,14 @@ block content
       div(class="div-scroll")
         table(id="mac_prov_frame_tbl", width="100%", style="overflow:scroll;white-space:pre;")
           tr
-            th(id="Name", style="background-color: #000")
+            th(id="Name", style="background-color: #000", align="center")
               | Name
-            th(id="Payload", style="background-color: #000")
+            th(id="Payload", style="background-color: #000", align="center")
               | Payload
-            th(id="SHECmdExtracted", style="background-color: #000")
-              | SHE Cmd Extracted
+            th(id="SHECmdExtracted", style="background-color: #000", align="center").
+              SHE
+              Cmd 
+              Extracted
   script(type="text/javascript" src="/javascripts/list_mac_prov_frame_onLoad.js")
   script(type="text/javascript")
     |
