--- a/views/extract_secured_mac_frames.pug
+++ b/views/extract_secured_mac_frames.pug
@@ -1,3 +1,4 @@
+// comment
 extends layout
 
 block scripts
@@ -29,20 +30,11 @@ block content
               center
                 input(type="button", title="Back ...", value="Back", onclick="document.location.href='/';")
   script(type="text/javascript", src='/javascripts/tooltip.js')
+  script(type="text/javascript", src='/javascripts/extract_secured_mac_frames_onLoad.js')
   script(type="text/javascript")
     | 
     | var active_keys = #{activeKeys};
     | var log_file_id = #{logFileID};
     | var result_status = "#{status}";
     | var result_log = "#{result_log}";
-    | function localOnLoad() 
-    | {
-    |   const para = document.createElement("p");
-    |   const node = document.createTextNode(result_status);
-    |   para.appendChild(node);
-    |   document.getElementById('status').appendChild(para);
-    |   document.getElementById('result_log').appendChild(document.createTextNode(result_log));
-    |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
-    |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
-    | }
-    |
+    | 
