Fixed list of frame
inverted

--- a/views/list_log_files.pug
+++ b/views/list_log_files.pug
@@ -55,12 +55,12 @@ block content
     | }
     | function onListSecuredFrame(i)
     | {
-    |    document.location.href = '/list_mac_prov_frame/' + log_files_tbl[i]['id'];
+    |    document.location.href = '/list_secured_frame/' + log_files_tbl[i]['id'];
     | }
     | // Event handler for checkbox allowing to process provisionning frames
     | function onListProvFrame(i)
     | {
-    |    document.location.href = '/list_secured_frames/' + log_files_tbl[i]['id'];
+    |    document.location.href = '/list_mac_prov_frames/' + log_files_tbl[i]['id'];
     | }
     | // Event handler for the page onload event (set from the body tag)
     | function localOnLoad()
