Added LogFileId for list_secured_frame url
/list_secured_frame/3/1

--- a/views/list_log_files.pug
+++ b/views/list_log_files.pug
@@ -55,7 +55,7 @@ block content
     | }
     | function onListSecuredFrame(i)
     | {
-    |    document.location.href = '/list_secured_frames/' + log_files_tbl[i]['id'];
+    |    document.location.href = '/list_secured_frames/' + log_files_tbl[i]['id'] + '/1';
     | }
     | // Event handler for checkbox allowing to process provisionning frames
     | function onListProvFrame(i)
